# CosySyft

./: .gitignore  CLAUDE.md  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp
src/synthesis/: CMakeLists.txt
src/synthesis/header/: DfaGameSynthesizer.h  ExplicitStateDfa.h  InputOutputPartition.h  Player.h  Quantification.h  ReachabilityMaxSetSynthesizer.h  Stopwatch.h  String_utilities.h  SymbolicStateDfa.h  Synthesizer.h  Transducer.h  VarMgr.h
src/synthesis/source/: DfaGameSynthesizer.cpp  ExplicitStateDfa.cpp  InputOutputPartition.cpp  Quantification.cpp  ReachabilityMaxSetSynthesizer.cpp  Stopwatch.cpp  String_utilities.cpp  SymbolicStateDfa.cpp  Transducer.cpp  VarMgr.cpp
