set(SYNTHESIS_LIB_NAME "cosysyft_synthesis")
set(SYNTHESIS_MODULE_PATH "${PROJECT_SOURCE_DIR}/src/synthesis")
set(SYNTHESIS_INCLUDE_PATH "${SYNTHESIS_MODULE_PATH}/header")
set(SYNTHESIS_SRC_PATH "${SYNTHESIS_MODULE_PATH}/source")

include_directories(${EXT_INCLUDE_PATH} ${SYNTHESIS_INCLUDE_PATH})
message(STATUS "EXT_INCLUDE_PATH: ${EXT_INCLUDE_PATH}")

file(GLOB_RECURSE HEADER_FILES ${SYNTHESIS_INCLUDE_PATH}/*.h)
file(GLOB_RECURSE SOURCE_FILES ${SYNTHESIS_SRC_PATH}/*.cpp)

add_library(${SYNTHESIS_LIB_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(${SYNTHESIS_LIB_NAME} ${EXT_LIBRARIES_PATH})

# Export vars for parent scope
set(SYNTHESIS_INCLUDE_PATH ${SYNTHESIS_INCLUDE_PATH} PARENT_SCOPE)
set(SYNTHESIS_LIB_NAME ${SYNTHESIS_LIB_NAME} PARENT_SCOPE)
